Fix #106: Shared database should be the default setting
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/106

--- a/net.resheim.eclipse.timekeeper.ui/src/net/resheim/eclipse/timekeeper/ui/preferences/messages.properties
+++ b/net.resheim.eclipse.timekeeper.ui/src/net/resheim/eclipse/timekeeper/ui/preferences/messages.properties
@@ -1,20 +1,13 @@
-DatabasePreferences_PageTitle=Database connection
-DatabasePreferences_URL=Database URL:
+DatabasePreferences_URL=JDBC URL:
 DatabasePreferences_ExportMessage=Files have been created with %1$s records from the current database.
 DatabasePreferences_ExportError=Could not export data
 DatabasePreferences_RestartRequired=Restart Required
-DatabasePreferences_ChangeMessage=Please note that this application must be restarted in order for the database URL changes to work.\n\
-You may want to export existing data first, so that they can be imported into the new database.
+DatabasePreferences_ChangeMessage=Please note that this application must be restarted in order for the database URL changes to work. You may want to export existing data first, so that they can be imported into the new database.
 DatabasePreferences_Import=Import...
 DatabasePreferences_ChooseImportFolder=Please choose a folder to import from
 DatabasePreferences_DataImported=Data imported
 DatabasePreferences_CreatedMessage=A total of %1$s records was merged or created from selected files.
 DatabasePreferences_ImportError=Could not import data
-DatabasePreferences_MixedMode=Automatic database mixed mode
-DatabasePreferences_AutoDescription=Switching on the automatic database mixed mode will enable multiple instances to\n\
-connect to the same database, but may cause some delay when starting up. Use\n\
-standard file URLs. For example: jdbc:h2:~/.timekeeperdb. For server connections\n\
-use the form jdbc:h2:tcp://localhost/~/timekeeperdb.
 DatabasePreferences_ExportImportTitle=Export/Import to comma separated files
 DatabasePreferences_Export=Export...
 DatabasePreferences_ChooseExportFolder=Please choose a folder to store the exported files
